:bug: Fix label alignment in rainbow-colors theme

--- a/assets/menu-themes/rainbow-labels/theme.css
+++ b/assets/menu-themes/rainbow-labels/theme.css
@@ -71,7 +71,7 @@
     height: var(--icon-size);
     border-radius: var(--icon-size);
     top: calc(-1 * var(--icon-size) / 2);
-    padding: calc(var(--icon-size) / 5) calc(var(--icon-size) / 3);
+    padding: calc(var(--icon-size) / 4) calc(var(--icon-size) / 3);
     font-size: calc(var(--icon-size) / 2.7);
   }
 
